<resources>
    <string name="app_name">edu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">姓名</string>
    <string name="nav_header_id">学号</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_login">登录</string>
    <string name="action_register">注册</string>
    <string name="error_invalid_account">账号格式错误</string>
    <string name="error_invalid_password">密码格式错误</string>
    <string name="error_incorrect_password">账号或密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
