<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".student.StudentRegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="18dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <AutoCompleteTextView
            android:id="@+id/register_input_account_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_account"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusForward="@id/register_input_password_teacher"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="203dp">

        <EditText
            android:id="@+id/register_input_password_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusForward="@id/register_input_password_check_teacher"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="203dp">

        <EditText
            android:id="@+id/register_input_password_check_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="再次输入密码"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusForward="@id/register_input_name_teacher"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="135dp">

        <EditText
            android:id="@+id/register_input_name_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nav_header_name"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_button_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_border"
        android:text="立即注册" />


</LinearLayout>